# gockget

./: .coveragerc  .gitattributes  .gitignore  README.md  banner.html  main.py  pyproject.toml  requirements.txt  scrape.example.txt
.github/workflows/: ci.yml  release.yml
app/: banner.py  cli.py  config.py  downloader.py  exceptions.py  loader.py  models.py  requirements.py  saver.py  utils.py  verify.py  workers.py
tests/: test_cli.py  test_downloader.py  test_loader.py  test_requirements.py  test_saver.py  test_utils.py  test_verify.py  test_workers.py
