[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gockget"
version = "1.0.2"
description = "Threaded downloader utility"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  { name = "Bridgette Ryan" }
]

dependencies = [
  "xnxx_api",
  "av",
  "httpx[http2]",
  "colorama",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
]

[project.urls]
Homepage = "https://github.com/bridgette-ryan/gockget"
Issues = "https://github.com/bridgette-ryan/gockget/issues"

[project.scripts]
gockget = "main:main"

[tool.setuptools]
packages = ["app"]
py-modules = ["main"]